<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="subtitle_text">Welcome back you have\n been missed</string>
    <string name="title_text">Hello Again</string>
    <string name="password">Password</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Enter your password</string>
    <string name="login_button_text">new login</string>
    <string name="outline_button_text">login with existing account</string>
    <string name="fab_content_desc">fab_content_desc</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="enter_shoe_name">Enter shoe name</string>
    <string name="company_name">Company Name</string>
    <string name="enter_company_name">Enter company name</string>
    <string name="shoe_size">Shoe size</string>
    <string name="enter_shoe_size">Enter shoe size</string>
    <string name="description">Description</string>
    <string name="enter_description">Enter Description</string>
    <string name="cancel">cancel</string>
    <string name="add_shoe">Add shoe</string>
    <string name="log_out_description">Log out description</string>
    <string name="log_out">Log out</string>
</resources>
