<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_main"
        android:padding="25dp"
        tools:context=".LoginFragment">

        <TextView
            android:id="@+id/main_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_mono"
            android:layout_marginTop="10dp"
            android:text="@string/title_text"
            android:textColor="@color/title_color"
            android:textSize="25sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline1"
            app:layout_constraintBottom_toTopOf="@id/subtitle_tv"/>

        <TextView
            android:id="@+id/subtitle_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_mono"
            android:text="@string/subtitle_text"
            android:textAlignment="center"
            android:textColor="@color/subtitle_text_color"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/Email_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_title_tv" />

        <TextView
            android:id="@+id/Email_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_mono"
            android:text="@string/email"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toTopOf="@id/EmailTextField"
            app:layout_constraintStart_toStartOf="@id/EmailTextField"
            app:layout_constraintTop_toBottomOf="@id/subtitle_tv" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/EmailTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            app:endIconMode="clear_text"
            app:layout_constraintBottom_toTopOf="@id/password_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Email_label"
            app:startIconDrawable="@drawable/ic_baseline_email_24"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailTextInputLayout"
                style="@style/CustomTextInputEditText" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/password_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_mono"
            android:text="@string/password"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toTopOf="@id/PasswordTextField"
            app:layout_constraintStart_toStartOf="@id/PasswordTextField"
            app:layout_constraintTop_toBottomOf="@id/EmailTextField" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/PasswordTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_baseline_vpn_key_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_label"
            app:layout_constraintBottom_toTopOf="@id/loginBtn"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHint="@color/label_text_color" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:height="60dp"
            android:fontFamily="@font/roboto_mono"
            android:text="@string/login_button_text"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/PasswordTextField"
            app:layout_constraintBottom_toTopOf="@id/outlinedButton" />

        <Button
            android:id="@+id/outlinedButton"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="60dp"
            android:text="@string/outline_button_text"
            android:fontFamily="@font/roboto_mono"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.72" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>